--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <button id="increaseTempoButton" class="tempo-button btn-r"></button>
         <button id="decreaseTempoButton" class="tempo-button btn-l"></button>
         <span id="tempoDisplay" class="tempo"> Tempo: 120 BPM</span>
+        <button class="piano2">?</button>
       </div> 
       </div>
     </header>
